<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/proyecto_background_proyecto_app"
    android:orientation="vertical"
    tools:context=".proyectoApp.proyectoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/proyecto_bienvenida"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/proyecto_categorías"
        android:textColor="@color/proyecto_subtitle_text"
        android:textSize="19sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_margin="14dp"
        app:cardBackgroundColor="@color/proyecto_background_card"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:paddingTop="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="32dp"
                android:text="@string/proyecto_selectividad"
                android:textAllCaps="true"
                android:textColor="@color/proyecto_subtitle_text"
                android:textSize="19dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvNotaSelectividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:text="10" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsRange"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:stepSize="0.1"
                android:valueFrom="0"
                android:valueTo="14" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_margin="14dp"
            app:cardBackgroundColor="@color/proyecto_background_card"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/proyecto_bachiller1"
                    android:textColor="@color/proyecto_subtitle_text"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvNotaPrimero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    tools:text="7.1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fabSubstractPrimero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/substract_restar"
                        app:backgroundTint="@color/proyecto_fab_app"
                        app:maxImageSize="40dp" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fabAddPrimero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/add_sumar"
                        app:backgroundTint="@color/proyecto_fab_app"
                        app:maxImageSize="40dp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_margin="14dp"
            app:cardBackgroundColor="@color/proyecto_background_card"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/proyecto_bachiller2"
                    android:textColor="@color/proyecto_subtitle_text"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvNotaSegundo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    tools:text="7.1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fabSubstractSegundo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/substract_restar"
                        app:backgroundTint="@color/proyecto_fab_app"
                        app:maxImageSize="40dp" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fabAddSegundo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/add_sumar"
                        app:backgroundTint="@color/proyecto_fab_app"
                        app:maxImageSize="40dp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>



    
    <Button
        android:id="@+id/btnCalculador"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/proyecto_calculador"
        android:textStyle="bold"
        android:textSize="20sp"
        app:backgroundTint="@color/proyecto_background_card">

    </Button>


</androidx.appcompat.widget.LinearLayoutCompat>


